# zu_engine

./: .gitignore  Cargo.toml  README.md  build.gradle.kts  codebook.toml  justfile  local.properties
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/wgpuapplication/: MainActivity.kt
crates/zu_android/: Cargo.toml
crates/zu_android/src/: lib.rs
crates/zu_core/: Cargo.toml  Trunk.toml  index.html
crates/zu_core/shaders/: obj_draw.wgsl  radiance_cascades.wgsl
crates/zu_core/src/: app.rs  app_state.rs  camera.rs  egui_tools.rs  fragment_render_pass.rs  gui.rs  lib.rs  main.rs  object_render_pass.rs  radiance_render_pass.rs  scene_texture.rs  texture_manager.rs
crates/zu_core/src/render_passes/: distant_field_pass.rs  jfa_compute_pass.rs  jfa_pass.rs  mod.rs  object_render_pass.rs  quad_vertex.rs  radiance_render.rs  radiance_render_old_pass.rs  radiance_render_pass.rs  render_pass_manager.rs  seed_pass.rs  show_pass.rs
crates/zu_core/src/render_passes/jfa_passes/: jfa_compute.rs  jfa_compute_pass_one_shot.rs  jfa_compute_star.rs  jfa_pass.rs  mod.rs
crates/zu_core/src/render_passes/jfa_passes/shaders/: jfa_compute.wgsl  jfa_compute_one_shot.wgsl  jfa_compute_star.wgsl
crates/zu_core/src/render_passes/radiance_cascades_passes/: mod.rs  radiance_render.rs  radiance_render_compute.rs  radiance_render_old_pass.rs
crates/zu_core/src/render_passes/radiance_cascades_passes/shaders/: radiance_cascades.wgsl  radiance_cascades_compute.wgsl  radiance_cascades_old.wgsl
crates/zu_core/src/render_passes/shaders/: distant_field.wgsl  jfa.wgsl  jfa_compute.wgsl  jfa_compute_one_shot.wgsl  quad_vertex.wgsl  radiance_cascades.wgsl  radiance_cascades_old.wgsl  seed_pass.wgsl  show_pass.wgsl
crates/zu_core/src/styles/: default_dark.rs  gruvbox_egui.rs  mod.rs
crates/zu_core/src/texture_manager/: mod.rs
crates/zu_core/src/texture_manager/textures/: mod.rs  scene_texture.rs  standard.rs  standard_f16.rs  standart_rg16.rs
crates/zu_core/src/widgets/: mod.rs  usage_diagnostics.rs
crates/zu_scripting/: Cargo.toml
crates/zu_scripting/src/: engine_mod.rs  lib.rs  mod_manager.rs
crates/zu_scripting/src/functions/: mod.rs
game_modules/go_mod/: README.md  go.mod  main.go  zu:engine@0.1.0.wasm  zu_mod.wasm
game_modules/go_mod/internal/zu/engine/core/: core.wasm.go  core.wit.go
game_modules/go_mod/internal/zu/engine/zu-mod/: zu-mod.exports.go  zu-mod.wasm.go  zu-mod.wit.go
game_modules/go_mod/wit/: engine.wit
gradle/wrapper/: gradle-wrapper.properties
