[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.dependencies]
log = "0.4.27"
indexmap = "2.10.0"
parking_lot = "0.12.4"
anyhow = "1.0.100"
thiserror = "*"
rand = "*"

zu_core = {path = "crates/zu_core"}
zu_scripting = {paht = "crates/zu_scripting"}

egui = { version = "0.32.3" }

[patch.crates-io]
puffin = { git = "https://github.com/EmbarkStudios/puffin.git", branch = "main" }
