[package]
name = "zu_android"
version = "0.1.0"
edition = "2024"

[lib]
name = "zu_android"
crate-type = ["cdylib"]

[dependencies]
zu_core = {workspace = true}
log = {workspace = true}

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15.1"
winit = { version = "0.30.12", features = ["android-game-activity"] }

[package.metadata.android]
build_targets = ["armv7-linux-androideabi", "aarch64-linux-android"]
target_sdk_version = 29
min_sdk_version = 23
