[package]
name = "zu_core"
version = "0.1.0"
edition = "2024"

[lib]
name = "zu_core"

[dependencies]
wgpu = {version = "27.0.1"}

#Egui stuff
egui = { workspace = true }
egui_extras = { version = "0.33.0", features = ["syntect"] }
egui-wgpu = { version = "0.33.0", features = ["winit"] }
egui-winit = { version = "0.33.0", default-features = false }
egui-probe = {version="0.10", features = ["derive"]}

winit = "0.30.12"
log = { workspace = true }
anyhow = "1.0.98"
parking_lot = {workspace = true}
env_logger = "0.11.8"
pollster = "0.4.0"
glam = {version = "0.30.6", features = ["bytemuck"]}
bytemuck = "1.23.2"
indexmap = {workspace = true}

puffin = {path = "../../../puffin/puffin"}
puffin_egui = {path = "../../../puffin/puffin_egui"}
puffin_http = {path = "../../../puffin/puffin_http"}
rand = "0.9.2"

[target.'cfg(windows)'.dependencies]
win_dialog = "1.0.1"  # Or latest version
backtrace = "0.3.76"   # For capturing backtraces

[profile.dev]
opt-level = 0
[profile.dev.package."*"]
opt-level = 3
