[package]
name = "zu_scripting"
version = "0.0.0"
edition = "2024"

[dependencies]
wasmtime = { version = "37.0.1"}
wit-parser = "0.239.0"
wit-component = "0.239.0"
wasmtime-wasi = "37.0.1"

rand = {workspace = true}
thiserror = {workspace = true}
anyhow = { workspace = true }
egui = { workspace = true}
log = {workspace = true}
